# Collaborative-Fraud-Intelligence-Simulator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  benchmark.py  deploy_hf.bat  deploy_hf.ps1  docker-compose.dev.yml  docker-compose.multinode.yml  docker-compose.yml  package-lock.json  pyrightconfig.json  vercel.json
backend/: README.md  alembic.ini  benchmark_real_data.py  pyproject.toml  pyrightconfig.json  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/application/: __init__.py
backend/app/domain/: __init__.py  ai_act_compliance.py  async_fl_engine.py  backup_record.py  benchmark_runner.py  case_management.py  consortium_governance.py  consortium_policy.py  data_validator.py  deployment_state.py  dr_coordinator.py  entities.py  entities_phase2.py  enums.py  fuzzy_psi.py  incident_playbook.py  inference_fallback.py  label_privacy_guard.py  metrics_service.py  model_governance.py  model_lifecycle.py  protocol_versioning.py  psi_service.py  quorum_manager.py  realtime_explainer.py  regional_governance.py  retention_policy.py  security_evaluator.py  sla_contract.py  spectral_defense.py  tenant_management.py  value_objects.py  value_objects_phase2.py  web_console.py
backend/app/infrastructure/: __init__.py  cache.py  celery_app.py  database.py  event_bus.py  models.py  redis_store.py  telemetry.py
backend/app/presentation/: __init__.py
backend/app/tasks/: __init__.py  simulation_tasks.py
backend/scripts/: generate_plots.py  test_mlflow_run.py
backend/tests/: conftest.py  test_advanced_opt.py  test_alert_service.py  test_case_service.py  test_entity_resolution.py  test_gateway.py  test_graph_engine.py  test_risk_engine.py  test_simulation_router.py
backend/tests/integration/: test_db_persistence.py  test_explainability_api.py  test_graph_analytics_api.py  test_grpc_transport.py  test_multinode_fl_round.py  test_simulation_integration.py
backend/tests/unit/: test_admin_console_router.py  test_advanced_explainability.py  test_adversarial_defense.py  test_async_fl_quorum.py  test_async_retraining_scheduler.py  test_audit_evidence.py  test_automated_retraining.py  test_backdoor_defense_validation.py  test_backup_verifier.py  test_bank_client_daemon.py  test_bank_connector_sdk.py  test_cfi_cli.py  (+94 more)
sdk/python/: pyproject.toml
(+309 files in other folders)
