[project]
name = "collaborative-fraud-intelligence"
version = "0.1.0"
description = "Privacy-preserving cross-institution fraud detection using Federated Learning"
requires-python = ">=3.12"

[project.scripts]
cfi-cli = "app.presentation.cli.cfi_cli:main"


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501", "N803", "N806", "B905", "B007", "B904", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
